# ceylon-project-template

./: main.py  pyproject.toml
agents/: InterfaceAgent.py  process_agent.py
dashboard/: bun.lockb  package.json
dashboard/src/app/: layout.tsx  page.tsx  socket-client.tsx
dashboard/src/components/parts/chat/: chat-messages.tsx  chat-ui.tsx
dashboard/src/context/data/: chat-model.ts
dashboard/src/context/stores/: chat-store.ts
data/: message.py
